Add Style to score div

--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>leaderboard</title>
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+    />
   </head>
   <body>
     <main>
-      <h1 class="main-title">Leaderboard</h1>
       <div class="wrapper">
         <div class="score">
-          <div class="header-score">
+          <h1 class="main-title">Leaderboard</h1>
+          <div class="header-score header-icon">
+            <i class="uil uil-trophy"></i>
             <h2 class="recent-score">Recent Scores</h2>
             <div class="refresh-btn">
               <button class="refresh" type="submit">Refresh</button>
@@ -19,7 +24,6 @@
           </div>
           <div class="score-results">
             <ul class="result-ul">
-              
             </ul>
           </div>
         </div>
